# asm-opcode

./: CMakeLists.txt  input-d.txt  input-x.txt  input.txt  install.sh
src/converter/: CMakeLists.txt  converter.cpp
src/converter/include/: converter.h
src/converter/include/converter/: converter.h
src/decoder/: CMakeLists.txt  decodeHelper.h  decoder.cpp
src/decoder/include/decoder/: decoder.h
src/encoder/: CMakeLists.txt  encoder.cpp
src/encoder/include/encoder/: encoder.h
src/main/: CMakeLists.txt  main.cpp
src/mapping/: CMakeLists.txt  mapping.cpp  registers.h
src/mapping/include/mapping/: instructionType.h  instructions.h  mapping.h
